--- a/examples/complete/css/main.css
+++ b/examples/complete/css/main.css
@@ -1,3 +1,4 @@
+<?php require_once dirname(__FILE__)."/../../../dom.php"; ?>
 /**
  *****************************************************************************
  * COLORS SCHEMES 
