--- a/examples/complete/css/main.css
+++ b/examples/complete/css/main.css
@@ -214,7 +214,7 @@ body::-webkit-scrollbar-thumb { background-color: var(--scrollbar-thumb-color); 
 /* Typography */
 
 h1 		        { color: var(--h1-color); }
-h2 		        { color: var(--h2-color);  <?= css_gradient() ?> }
+h2 		        { color: var(--h2-color);  <?= dom_css_gradient() ?> }
 h3 		        { color: var(--h3-color); }
 h4 		        { color: var(--h4-color); }
 h5 		        { color: var(--h5-color); }
